--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
     <div class="container">
         <section>
             <h2>About Our Campaign</h2>
-            <p>We started this GoFundMe campaign to [state purpose, e.g., help with medical expenses, support a project, etc.]. With your help, we can reach our goal and make a lasting impact.</p>
+            <p>Our dream is to build a sustainable, eco-friendly home that allows us to live harmoniously with nature. This home will be designed to minimize our carbon footprint by utilizing renewable energy, sustainable building materials, and self-sufficient systems like rainwater harvesting and solar power. By creating a home that works with nature rather than against it, we aim to inspire others to make sustainable living a priority and contribute to a healthier planet]. With your help, we can reach our goal and make a lasting impact.</p>
             <a href="https://gofund.me/270bde76" class="button">Donate Now</a>
         </section>
 
         <section>
             <h2>Why This Cause Matters</h2>
-            <p>[Add a personal story or details about the importance of your campaign here. Explain why donations are needed and how they will be used.]</p>
+            <p> <p>Hi, we’re Kyler and Edgar, and we’ve always dreamed of living a life where we give more to the Earth than we take. This vision grew stronger as we witnessed the increasing impact of climate change on our world. We’ve decided to take action by building a sustainable home that reflects our commitment to living a low-impact, eco-conscious lifestyle.</p>
+<p>Now, we need your help to bring this vision to life. Building sustainably isn’t easy or cheap, but we believe it’s worth it for a future where people and nature coexist in harmony. With your support, we can create a home that shows what’s possible when we prioritize sustainability and responsibility.</p>
         </section>
 
         <section>
@@ -87,7 +88,6 @@
 
         <section>
             <h2>Progress Updates</h2>
-            <p>[Regularly update this section with campaign progress, milestones, and thank-you messages for donors.]</p>
         </section>
     </div>
 
