--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="container">
         <section>
-            <img https://github.com/K2633-code/Gofundme-Google/blob/7a82966eb55930a370a9d5062db90ee3a8184737/IMG_9268.jpeg="https://github.com/username/repository-name/raw/main/images/your-image.jpg" alt="Sustainable home" />
+            <img https://github.com/K2633-code/Gofundme-Google/blob/7a82966eb55930a370a9d5062db90ee3a8184737/IMG_9268.jpeg=" alt="Sustainable home" />
             <h2>About Our Campaign</h2>
             <p>Our dream is to build a sustainable, eco-friendly home that allows us to live harmoniously with nature. This home will be designed to minimize our carbon footprint by utilizing renewable energy, sustainable building materials, and self-sufficient systems like rainwater harvesting and solar power. By creating a home that works with nature rather than against it, we aim to inspire others to make sustainable living a priority and contribute to a healthier planet]. With your help, we can reach our goal and make a lasting impact.</p>
             <a href="https://gofund.me/270bde76" class="button">Donate Now</a>
@@ -73,7 +73,7 @@
 
         <section>
             <h2>Why This Cause Matters</h2>
-            <img https://github.com/K2633-code/Gofundme-Google/blob/9a9db2d1ae026c965ab40973a0fc07dcb8d4f67c/IMG_8869.jpeg="https://github.com/username/repository-name/raw/main/images/your-image.jpg" alt="KylerandEdgar" width="500" height="300" />
+            <img https://github.com/K2633-code/Gofundme-Google/blob/9a9db2d1ae026c965ab40973a0fc07dcb8d4f67c/IMG_8869.jpeg=" alt="KylerandEdgar" width="500" height="300" />
             <p> <p>Hi, we’re Kyler and Edgar, and we’ve always dreamed of living a life where we give more to the Earth than we take. This vision grew stronger as we witnessed the increasing impact of climate change on our world. We’ve decided to take action by building a sustainable home that reflects our commitment to living a low-impact, eco-conscious lifestyle.</p>
 <p>Now, we need your help to bring this vision to life. Building sustainably isn’t easy or cheap, but we believe it’s worth it for a future where people and nature coexist in harmony. With your support, we can create a home that shows what’s possible when we prioritize sustainability and responsibility.</p>
         </section>
